read multiplier from JSON